<resources>
    <string name="app_name">Vigr</string>

    <string name="phone_num_prompt">Enter your phone number</string>
    <string name="phone_num_confirm">Confirm</string>
    <string name="phone_num_hint">Your phone number</string>

    <string name="make_appointment">Make an Appointment</string>
    <string name="view_appointment">View my Appointments</string>

    <string name="lab_place">Place</string>
    <string name="lab_spec">Specialisation</string>

    <string name="cmd_search">Search</string>

    <string name="cmd_seldate">Select Date</string>

    <string name="patient_name_prompt">Name</string>
    <string name="patient_dob_prompt">Date Of Birth</string>
    <string name="patient_dob_gender">Gender</string>

    <string name="patient_dob_hint">dd/mm/yy</string>

    <string name="preference_file">com.ascalonic.vigr.PREFERENCE_FILE_KEY</string>

</resources>
